Cleaned up final

--- a/marketwhale_final.ipynb
+++ b/marketwhale_final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2a25bca4",
+   "id": "a8db3dd3",
    "metadata": {},
    "source": [
     "# Marketwhale\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f48ac26",
+   "id": "0524bf9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf5f8e2d",
+   "id": "b0730f5b",
    "metadata": {},
    "source": [
     "# Part 1: Algorithmic Trading- SVM Model \n",
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67f3290f",
+   "id": "7d910101",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58ad99dc",
+   "id": "6130f43a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2533dbfa",
+   "id": "697d439d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92971a2d",
+   "id": "87f386b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2652b270",
+   "id": "6765471c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27a2f577",
+   "id": "28a87f06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e79e0cd2",
+   "id": "a0d6a063",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6b2f0bb",
+   "id": "06fdb817",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f78e416",
+   "id": "5b825bb5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0546321d",
+   "id": "efb003eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0c16213",
+   "id": "976b1297",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f3930ae",
+   "id": "0ab2166a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97f26c45",
+   "id": "c9d4cfc5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca0f2748",
+   "id": "ccb98d39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e4d3324",
+   "id": "3fdb60f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b3168f7",
+   "id": "91779e90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8dd1a30",
+   "id": "a4e66103",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f479f785",
+   "id": "5456ea56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c64ae0b",
+   "id": "ec65d15b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc454029",
+   "id": "db0a0a5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "689104c3",
+   "id": "019d3316",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2064909e",
+   "id": "c0e61a58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5bc30602",
+   "id": "2e8da054",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f32afc08",
+   "id": "3bc1fa05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56b012df",
+   "id": "7dfd1194",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3072588",
+   "id": "48f85c7a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa928163",
+   "id": "ad989d9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d423613",
+   "id": "9d0d40b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12e713b6",
+   "id": "923d5d75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +526,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48829f60",
+   "id": "68fe4fe8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12d6977f",
+   "id": "ab34be0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12fa217d",
+   "id": "e4f144b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8035f0fd",
+   "id": "405474e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f88c94e",
+   "id": "970ccf69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "448b16ac",
+   "id": "623db638",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "238ece31",
+   "id": "8db63127",
    "metadata": {},
    "source": [
     "# Part 2: Neural Network - LSTM Model\n",
@@ -624,11 +624,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9a3bd84",
+   "id": "b498591a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use yfinance to retrieve BTC and ETH close values (note that with the current API 1m data can only be done for 7 days, and 1 hour only for 730 days)\n",
+    "#model is without fear and greed index \n",
+    "#Use yfinance to retrieve BTC and ETH close values (note that with the current API 1m data can only be done for 7 days, and 1 hour only for 730 days)\n",
     "\n",
     "start = \"2020-10-30\"\n",
     "end = \"2021-10-14\""
@@ -637,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45c365c2",
+   "id": "88b0ec39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09fe9f4d",
+   "id": "602d03f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51fe0334",
+   "id": "5795c7dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +693,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90fd2776",
+   "id": "aa6b5844",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,7 +712,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01e5660a",
+   "id": "0087106d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +727,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab333bdc",
+   "id": "aea36eff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -743,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6f55ceb",
+   "id": "6e6bb660",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -759,7 +760,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a809dbf",
+   "id": "a839a67c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +775,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77f142c7",
+   "id": "2394a3fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -793,7 +794,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee9e96a7",
+   "id": "6358631e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -811,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cf3a5dd",
+   "id": "c83a7a2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -831,7 +832,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d305f55c",
+   "id": "c4fbfcb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -845,7 +846,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7855eb2e",
+   "id": "9a9c58f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -861,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58fd246e",
+   "id": "6fd6da4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e452c6f",
+   "id": "55411776",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -917,7 +918,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da4c5c6c",
+   "id": "05b26ea9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -928,7 +929,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f99131d",
+   "id": "c3ef4e9c",
    "metadata": {},
    "source": [
     "# Part 3: Neural Network - CNN Model\n",
@@ -939,11 +940,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60309dcf",
+   "id": "6cfc7b7b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# split a data into samples\n",
+    "#model is without fear/greed index\n",
+    "#split a data into samples\n",
     "# code below borrowed from https://machinelearningmastery.com/how-to-develop-convolutional-neural-network-models-for-time-series-forecasting/\n",
     "\n",
     "def split_data(df, n_steps):\n",
@@ -965,7 +967,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e9e7920",
+   "id": "78fe4f79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -992,7 +994,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3db4716c",
+   "id": "24c95be9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1006,7 +1008,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ed550b2",
+   "id": "967c4431",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1027,7 +1029,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "269ae4a0",
+   "id": "de401989",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1041,7 +1043,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bf185b7",
+   "id": "a74591df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1061,7 +1063,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e1c6d48",
+   "id": "e3e53e28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1075,7 +1077,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c21c082a",
+   "id": "5178947d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1089,7 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03fcc69e",
+   "id": "cffc285d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1120,7 +1122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "788ed7bf",
+   "id": "0fbff10e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1146,7 +1148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "281f0dec",
+   "id": "931e5eeb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1154,181 +1156,6 @@
     "# Calculate and plot the cumulative returns for the `actual_returns` and the `trading_algorithm_returns`\n",
     "(1 + predictions_df[[\"actual_returns\", \"trading_algorithm_returns\"]]).cumprod().hvplot()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0a92c681",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "49dd560a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "425277db",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ea73e728",
-   "metadata": {},
-   "source": [
-    "# Part 4: Backtesting SVM Model and LSTM Model \n",
-    "### Completed by Jasmine Tengsico\n",
-    "** ** "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "368c4f5a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "66a9d269",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "10ccb094",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a99c2468",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c6a5bf12",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2105ffab",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#backtesting the SVM model "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "598b1238",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8a5cfe26",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "19c0cbae",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "70a219c2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a96ad656",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#backtesting the LSTM Model "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8140832b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#to be edited\n",
-    "#Reading saved model from JSON file\n",
-    "with open('fashionmnist_model.json', 'r') as json_file:\n",
-    "    json_savedModel= json_file.read()#load the model architecture \n",
-    "model_j = tf.keras.models.model_from_json(json_savedModel)\n",
-    "model_j.summary()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8d63f6d7",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a2e9d8f5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "af21812c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3bdcf7d7",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "67fc8d68",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
